# cppnote

./: CMakeLists.txt  README.md  Singleton  cin_cout  main.cpp  sly.txt
cin_cout.dSYM/Contents/Resources/DWARF/: cin_cout
sly_test/: Singleton.cc  Singleton.h  cin_cout.cc  const.cc  sharePtr.cc  sharePtr.h  sly.h  test01.cc
test/: sly4.txt
